--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-server.port=9090
+server.port=8081
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.password=1234
-spring.datasource.url=jdbc:postgresql://localhost:5432/chats
+spring.datasource.password=aliaskar03
+spring.datasource.url=jdbc:postgresql://chat-db.cpksw6u6m0fd.us-east-1.rds.amazonaws.com/
 spring.datasource.username=postgres
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
