--- a/.github/workflows/mavens.yml
+++ b/.github/workflows/mavens.yml
@@ -1,5 +1,3 @@
-name: Java CI with Maven
-
 on:
   push:
     branches: [ "master" ]
@@ -22,13 +20,17 @@ jobs:
       - name: Build with Maven
         run: mvn clean install
       - name: Log in to Docker Hub
-        uses: docker/login-action@v2
-      - name: Build & push Docker image
-        uses: mr-smithers-excellent/docker-build-push@v5
-        with:
-          image: aliaskar2003/chat
-          tags: latest
-          registry: docker.io
-          dockerfile: Dockerfile
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+      - name: Build Docker image
+        run: docker build -t aliaskar2003/chat .
+      - name: Publish image to docker hub
+        run: docker push aliaskar2003/chat:latest
+
+  deploy:
+    needs: build
+    runs-on: 'self-hosted'
+    steps:
+      - name: Pull image Docker Hub
+        run: docker pull aliaskar2003/chat:latest
+      - name: Run docker container
+        run: docker run -d -p 8081:8081 --name chat-container aliaskar2003/chat:latest
